--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif, typography;
+  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif, -apple-system;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,13 +16,11 @@
 }
 
 a {
-  font-weight: 600;
+  font-weight: 500;
   color: #1a1a1a;
-  text-decoration: inherit;
 }
 a:hover {
   color: #386BF6;
-  font-weight: 700;
 }
 
 body {
@@ -40,23 +38,25 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  /* border: 1px solid transparent; */
+  /* padding: 0.6em 1.2em; */
   font-weight: 500;
+  /* font-size: 14px; */
   font-family: inherit;
-  background-color: #2C3E50;
+  /* background-color: #2C3E50; */
   cursor: pointer;
   filter: drop-shadow(var(--drop-shadow-xl));
 }
-button:hover {
+/* button:hover {
+  font-weight: 500;
+  color: #ffffff;
   border-color: #386BF6;
   background-color: #386BF6;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
